i-MSCP ChangeLog
~~~~~~~~~~~~~~~~
-------------------------------------------------------------------------------------
i-MSCP 1.0.2.2 (RC3)
-------------------------------------------------------------------------------------


-------------------------------------------------------------------------------------
i-MSCP 1.0.2.1 (RC2)
-------------------------------------------------------------------------------------
2012-02-28: Torsten Widmann
	- RELEASE i-MSCP 1.0.2.1 (RC2)
	
Features / Enhancements:

	GUI:
		Core:
			- Added plugins management interface
			- Added action script (rest.php) to handle REST requests (The REST server will comming soon)
			- Updated action scripts and core library to fit with events system changes
		Components:
			- Authentication
				- Added authentication base class to handle authentication process
				- Added bruteforce class for bruteforce detection
			- Events system:
				- Added new events (See iMSCP_Events class)
				- Added support for listeners return values
				- Finished implementation of iMSCP_Events_Manager_interface
				- Updated Events documentation (iMSCP_Events, iMSCP_Database_Events, iMSCP_pTemplate_Events)
			- DebugBar:
				- Updated to fit with events system changes
			- Plugins:
				- Added plugin manager
				- Updated demo plugin to fit with events system changes
	Tools:
		- Updated PhpMyAdmin to version 3.4.10.1

Tickets:
	- Fixed #68: Defect - Hide disabled features
	- Fixed #201: Cosmetics - An exception have been thrown at Login with wrong password
	- Fixed #254: Defect - Error raised for default PHP directives values
	- Fixed #325: Defect - Missing PHP sendmail parameter in vhost file for ITK
	- Fixed #329: Bug - Custom DNS record - Syntax issue
	- Fixed #343: Defect - Disabled Mail should remove DNS entries
	- Fixed #345: Bug - admin - statistics
	- Fixed #346: Cosmetics - SquirrelMail - Warning: mime.php on line 36
	- Fixed #353: Bug - An exception have been thrown, when deleting a DB