@@ -4,6 +4,8 @@ i-MSCP ChangeLog
 i-MSCP 1.0.2.2 (RC3)
 -------------------------------------------------------------------------------------
 
+Tickets:
+	- Fixed #380: Bug - Order Panel - An exception have been thrown Hosting
 
 -------------------------------------------------------------------------------------
 i-MSCP 1.0.2.1 (RC2)
